force-app/main/default/objects/Claim__c/fields/Adjuster__c.field-meta.xml
<CustomField>
    <fullName>Adjuster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjuster</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>