force-app/main/default/objects/Claim__c/fields/Date_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Loss__c</fullName>
    <label>Date of Loss</label>
    <type>DateTime</type>
</CustomField>