force-app/main/default/objects/Claim__c/fields/Policy_Account_Holder_State__c.field-meta.xml
<CustomField>
    <fullName>Policy_Account_Holder_State__c</fullName>
    <label>Policy Account Holder State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>