force-app/main/default/objects/Claim__c/recordTypes/Property.recordType-meta.xml
<RecordType>
    <fullName>Property</fullName>
    <active>true</active>
    <description>Property damage claims</description>
    <label>Property</label>
</RecordType>