force-app/main/default/objects/Claim__c/listViews/Department_Manager_Queue_Claim.listView-meta.xml
<ListView>
    <fullName>Department_Manager_Queue_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Department Manager Queue</label>
    <queue>Department_Manager_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>