force-app/main/default/objects/Claim__c/listViews/Life_Claims_Queue_Claim.listView-meta.xml
<ListView>
    <fullName>Life_Claims_Queue_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Life Claims Queue</label>
    <queue>Life_Claims_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>