force-app/main/default/objects/Claim__c/listViews/Property_Claims_Queue_Claim.listView-meta.xml
<ListView>
    <fullName>Property_Claims_Queue_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Property Claims Queue</label>
    <queue>Property_Claims_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>