force-app/main/default/objects/Claim__c/listViews/Senior_Adjuster_Queue_Claim.listView-meta.xml
<ListView>
    <fullName>Senior_Adjuster_Queue_Claim</fullName>
    <filterScope>Queue</filterScope>
    <label>Senior Adjuster Queue</label>
    <queue>Senior_Adjuster_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>